fixed offer preview widget overlap

--- a/web/frontend/components/stylesheets/mainstyle.css
+++ b/web/frontend/components/stylesheets/mainstyle.css
@@ -220,3 +220,7 @@
 .banner-btn .Polaris-Banner__Button{
     background-color: rgba(222, 245, 247, 1);
 }
+
+.widget-visibility { 
+    overflow: hidden;
+}
